# xEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
code/AzCore/: CMakeLists.txt  PlatformDef.h
code/AzCore/API/: ApplicationAPI_android.h  ApplicationAPI_darwin.h  ApplicationAPI_ios.h  BootstrapReaderBus.h
code/AzCore/Android/: AndroidEnv.cpp  Utils.cpp  Utils.h
code/AzCore/Android/JNI/: JNI.h  Object_fwd.h  shared_ref.h
code/AzCore/Application/: Application.h  Application_android.cpp  Application_linux.cpp
code/AzCore/Asset/: AssetCommon.cpp  AssetCommon.h  AssetManager.cpp  AssetManager.h  AssetManagerBus.h  AssetManagerComponent.h  AssetManager_web.cpp  AssetSerializer.cpp
code/AzCore/Component/: BehaviorEntity.cpp  BehaviorEntity.h  ComponentApplicationBus.h  EntityContext.cpp  EntityUtils.cpp  EntityUtils.h  GameEntityContextBus.h  TickBus.h  TransformComponent.cpp
code/AzCore/Debug/: Trace.cpp
code/AzCore/EBus/: EBusEnvironment.cpp  Policies.h
code/AzCore/IO/: IOUtils.h  LocalFileIO.h  SystemFile.cpp  SystemFile.h
code/AzCore/Input/Channels/: InputChannelAnalog.h  InputChannelAxis3D.cpp  InputChannelAxis3D.h  InputChannelDelta.cpp  InputChannelDelta.h  InputChannelDigitalWithPosition2D.h  InputChannelDigitalWithSharedPosition2D.cpp  InputChannelQuaternion.h
code/AzCore/Input/Devices/: InputDevice.h  InputDeviceId.cpp  InputDeviceId.h
code/AzCore/Input/Events/: InputChannelEventFilter.h  InputChannelEventListener.cpp  InputTextEventListener.cpp
code/AzCore/Input/System/: InputSystemComponent.cpp
code/AzCore/Input/Utils/: AdjustAnalogInputForDeadZone.h
code/AzCore/InputEvent/: InputEventSystemComponentBus.h
code/AzCore/Jobs/: JobCompletion.h
code/AzCore/Math/: MathFunc.h  Random.h  Transform.h
code/AzCore/Memory/: PoolAllocator.h
code/AzCore/RTTI/: AzStdOnDemandReflection.inl  BehaviorContext.h  ReflectContext.h
code/AzCore/Script/: ScriptAsset.h  ScriptComponent.cpp  ScriptComponent.h  ScriptContext.cpp  ScriptContextDebug.h  ScriptSystemBus.h  ScriptSystemComponent.cpp  ScriptSystemComponent.h
code/AzCore/Script/lua/: lua.h
code/AzCore/Serialization/: IdUtils.inl  ObjectStreamComponent.cpp  ObjectStreamComponent.h  SerializeContext.cpp  Util.cpp  Util.h
code/AzCore/Slice/: SliceAsset.h  SliceBus.h  SliceComponent.cpp  SliceComponent.h
code/AzCore/StringFunc/: StringFunc.cpp  StringFunc.h
code/AzCore/std/: time.cpp
code/AzCore/std/typetraits/: add_const.h  remove_cv.h
code/Launcher/: CMakeLists.txt
code/Launcher/AndroidLauncher/: CMakeLists.txt  main.cpp
code/Launcher/AssetServer/: CMakeLists.txt  main.cpp
code/Launcher/IOSLauncher/: CMakeLists.txt  IOSApplication.h  IOSApplicationDelegate.mm
code/Launcher/MacLauncher/: CMakeLists.txt  MacApplicationDelegate.mm
code/Launcher/WebLauncher/: CMakeLists.txt  main.cpp
code/Launcher/WindowsLauncher/: CMakeLists.txt  main.cpp
engine/: CMakeLists.txt
engine/source/AzCore/: CMakeLists.txt  base.cpp  base.h
engine/source/AzCore/API/: ApplicationAPI.h  ApplicationAPI_linux.h  ApplicationAPI_win.h
engine/source/AzCore/Android/: APKFileHandler.cpp  APKFileHandler.h  AndroidEnv.h
engine/source/AzCore/Application/: Application.cpp  Application_darwin.mm  Application_ios.mm  Application_win.cpp
engine/source/AzCore/Asset/: AssetManagerComponent.cpp  AssetManager_http.cpp  BinaryAssetHandler.cpp  BinaryAssetHandler.h  GenericAssetHandler.h
engine/source/AzCore/CommandLine/: CommandLine.cpp  CommandLine.h
engine/source/AzCore/Component/: Component.cpp  ComponentApplication.cpp  ComponentApplication.h  Entity.cpp  Entity.h  EntityContext.h  EntityContextBus.h  GameEntityContextComponent.cpp  GameEntityContextComponent.h  TransformBus.h  TransformComponent.h
engine/source/AzCore/EBus/: EBus.h  EBusEnvironment.h  Results.h
engine/source/AzCore/FileFunc/: FileFunc.cpp  (+1 more)
engine/source/Launcher/: CMakeLists.txt
engine/source/Module/: CMakeLists.txt
runtime/: CMakeLists.txt
runtime/application/: Application.cc  Application.h  ApplicationDelegate.h
runtime/application/macOS/: MacOSApplication.mm
runtime/application/win32/: Win32Application.cc
runtime/asset/: Material.cc  Material.h  Mesh.cc  Mesh.h  Shader.cc  Shader.h  Texture.h
runtime/core/: Config.h  Core.h  Data.cc  Data.h  EASTL.cc  Log.cc  Log.h  RWLock.h  Types.h
runtime/graphics/: Graphics.cc  Graphics.h  GraphicsDefine.h  GraphicsResourceManagerInterface.h  GraphicsResourceSignature.cc  GraphicsResourceSignature.h  RendererInterface.h
runtime/graphics/config/: GraphicsConfig.h  MeshConfig.h  PipelineConfig.h  SamplerConfig.h  ShaderConfig.h  TextureConfig.h  UniformBufferConfig.h
runtime/graphics/info/: ShaderInfo.h  VertexLayout.h
runtime/graphics/state/: BlendState.h  ClearState.h  DepthStencilState.h  DrawCallState.h  RasterizerState.h
runtime/http/: HTTPFilesystem.cc  HTTPFilesystem.h
runtime/io/: Filesystem.h  FilesystemManager.h  IO.cc  IO.h  IOMessage.h  IOWorker.cc  IOWorker.h  Location.h  LocationPlaceholderManager.h
runtime/object/component/: Camera.cc  Camera.h  MeshRenderer.cc  MeshRenderer.h  Transform.cc  Transform.h
runtime/object/core/: Component.cc  Component.h  GameObject.cc  GameObject.h  Scene.cc  Scene.h
runtime/resource/: Resource.h  ResourceFactory.h  ResourceIdentity.h  ResourceManager.h  ResourceManger.cc  ResourcePool.h
runtime/storage/: Path.cc  Path.h  Storage.h  StorageFilesystem.cc  StorageFilesystem.h
runtime/util/: MeshUtil.cc  MeshUtil.h
runtime/window/: Window.cc  Window.h  WindowConfig.h  WindowDefine.h  WindowDelegate.h  WindowFactory.cc  WindowFactory.h  WindowInterface.h
runtime/window/macOS/: MacOSWindow.h  MacOSWindow.mm
runtime/window/win32/: Win32Window.cc  Win32Window.h
tool/: CMakeLists.txt
tool/mesh_convert_tool/: CMakeLists.txt  MeshConvertTool.cc  MeshConvertToolDefine.h  MeshConvertToolWindow.cc  MeshConvertToolWindow.h  MeshConverter.cc  MeshConverter.h  MeshViewerWindow.cc  MeshViewerWindow.h
tool/shader_compile_tool/: CMakeLists.txt  ShaderCompileTool.cc  ShaderCompileToolWindow.cc  ShaderCompileToolWindow.h
(+654 files in other folders)
