add_subdirectory(LauncherBase)
if(WIN32)
    #add_subdirectory(AssetServer)
    add_subdirectory(WindowsLauncher)
elseif(FIPS_IOS)
    add_subdirectory(IOSLauncher)
elseif(FIPS_ANDROID)
    add_subdirectory(AndroidLauncher)
elseif(APPLE)
    add_subdirectory(MacLauncher)
elseif(FIPS_EMSCRIPTEN)
    add_subdirectory(WebLauncher)
endif()