add_subdirectory(LauncherBase)
if(FIPS_WINDOWS)
    add_subdirectory(AssetServer)
    add_subdirectory(WindowsLauncher)
elseif(FIPS_IOS)
    add_subdirectory(IOSLauncher)
elseif(FIPS_ANDROID)
    add_subdirectory(AndroidLauncher)
elseif(FIPS_OSX)
    add_subdirectory(MacLauncher)
elseif(FIPS_EMSCRIPTEN)
    add_subdirectory(WebLauncher)
endif()